--- a/buttons.html
+++ b/buttons.html
@@ -8,6 +8,15 @@
         border-radius: 5px;
         cursor: pointer;
         margin-right: 8px;
+        transition: opacity 0.15s;
+    }
+
+    .subscribe-button:hover{
+        opacity: 0.7;
+    }
+
+    .subscribe-button:active{
+        opacity: 0.4;
     }
 
     .join-button{
@@ -20,10 +29,20 @@
         width: 62px;
         border-radius: 5px;
         cursor: pointer;
+        transition: background-color 1s, color 1s;
+    }
+
+    .join-button:hover{
+        background-color: #065fd4;
+        color: white;
+    }
+
+    .join-button:active{
+        opacity: 0.7;
     }
 
     .tweet-button{
-        background-color: #1d9bf0;
+        background-color: rgb(29, 155, 240);
         color: #ffffff;
         border: none;
         height: 36px;
@@ -33,6 +52,11 @@
         font-size: 15px;
         cursor: pointer;
         margin-left: 8px;
+        transition: box-shadow 0.15s;
+    }
+
+    .tweet-button:hover{
+        box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.15);
     }
 </style>
 
