--- a/buttons.html
+++ b/buttons.html
@@ -3,12 +3,15 @@
         background-color: #cc0000;
         color: white;
         border: none;
-        height: 36px;
-        width: 105px;
         border-radius: 5px;
         cursor: pointer;
         margin-right: 8px;
+        padding-top: 10px;
+        padding-bottom: 10px;
+        padding-left: 16px;
+        padding-right: 16px;
         transition: opacity 0.15s;
+        vertical-align: top;
     }
 
     .subscribe-button:hover{
@@ -25,11 +28,14 @@
         border-style: solid;
         border-width: 1px;
         color: #065fd4;
-        height: 36px;
-        width: 62px;
+        padding-top: 9px;
+        padding-bottom: 9px;
+        padding-left: 16px;
+        padding-right: 16px;
         border-radius: 5px;
         cursor: pointer;
         transition: background-color 1s, color 1s;
+        vertical-align: top;
     }
 
     .join-button:hover{
@@ -45,14 +51,17 @@
         background-color: rgb(29, 155, 240);
         color: #ffffff;
         border: none;
-        height: 36px;
-        width: 74px;
+        padding-top: 10px;
+        padding-bottom: 10px;
+        padding-left: 16px;
+        padding-right: 16px;
         border-radius: 18px;
         font-weight: bold;
         font-size: 15px;
         cursor: pointer;
         margin-left: 8px;
         transition: box-shadow 0.15s;
+        vertical-align: top;
     }
 
     .tweet-button:hover{
@@ -61,7 +70,7 @@
 </style>
 
 <button class="subscribe-button">
-    SUBSRIBE
+    SUBSRIBE 
 </button>
 
 <button class="join-button">
